--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   backend:
     build: ./backend_librarymangement
     ports:
-      - 5000:5000
+      - 8080:5000
     depends_on:
       - redis-server
 
@@ -16,11 +16,11 @@ services:
       - backend
 
   redis-server:
-    image: 'redis:alpine'
-    ports:
-      - "6379:6379"
+    image: 'redis'
     volumes:
       - redis-data:/data/rdb
+    ports:
+      - 6379:6379  
     networks:
       - app-network
 
