--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       - 8080:5000
     depends_on:
       - redis-server
+    networks:
+      - app-network  
 
   frontend:
     build: ./online-library
@@ -14,13 +16,17 @@ services:
       - 80:3000
     depends_on:
       - backend
+    networks:
+      - app-network  
 
   redis-server:
     image: 'redis'
+    restart: always
+    hostname: redisdb
+    ports:
+      - 6379:6379
     volumes:
       - redis-data:/data/rdb
-    ports:
-      - 6379:6379  
     networks:
       - app-network
 
