--- a/backend_librarymangement/package.json
+++ b/backend_librarymangement/package.json
@@ -23,6 +23,7 @@
     "path": "^0.12.7",
     "redis": "^4.0.6",
     "rotating-file-stream": "^3.0.3",
+    "solr-node": "^1.2.1",
     "swagger-ui-express": "^4.3.0",
     "yamljs": "^0.3.0"
   },
